完善定时任务

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 # Telegram Bot API Token - 从 BotFather 获取
 TELEGRAM_BOT_TOKEN=your_telegram_bot_token_here
-
+TARGET_CHAT_ID=your_target_chat_id_here
 # Notion API Token - 从 https://www.notion.so/my-integrations 获取
 NOTION_API_TOKEN=your_notion_api_token_here
 
@@ -26,3 +26,4 @@ USE_TWITTER_API=false
 DEEPSEEK_API_TIMEOUT=60        # API请求超时时间（秒）
 DEEPSEEK_API_MAX_RETRIES=3     # 失败时最大重试次数
 DEEPSEEK_API_RETRY_DELAY=5     # 初始重试延迟（秒），每次重试会加倍
+
