Update .env.example with new API keys
Add RapidAPI and Scraper Tech configuration options

--- a/.env.example
+++ b/.env.example
@@ -27,3 +27,11 @@ DEEPSEEK_API_TIMEOUT=60        # API请求超时时间（秒）
 DEEPSEEK_API_MAX_RETRIES=3     # 失败时最大重试次数
 DEEPSEEK_API_RETRY_DELAY=5     # 初始重试延迟（秒），每次重试会加倍
 
+RAPIDAPI_KEY= 
+
+SCRAPER_TECH_ENDPOINT = https://api.scraper.tech/tweet.php
+SCRAPER_TECH_KEY =  
+
+RAPID_API_ENDPOINT=https://twitter-api45.p.rapidapi.com/tweet.php
+RAPID_API_KEY= 
+
